@@ -8,9 +8,9 @@ __reversion__ = "$Revision: 247 $"
 __author__    = "$Author: holtwick $"
 __date__      = "$Date: 2008-08-15 13:37:57 +0200 (Fr, 15 Aug 2008) $"
 __version__   = VERSION = "VERSION{3.0.30}VERSION"[8:-8]
-__build__     = BUILD   = "BUILD{2008-12-01}BUILD"[6:-6]
+__build__     = BUILD   = "BUILD{2009-03-26}BUILD"[6:-6]
 
-VERSION_STR = "pisa %s (Build %s)\n(C) 2002-2008 Dirk Holtwick <dirk.holtwick@gmail.com>, Germany\nWebsite http://www.htmltopdf.org" % (
+VERSION_STR = "pisa %s (Build %s)\n(C) 2002-2009 Dirk Holtwick <dirk.holtwick@gmail.com>, Germany\nWebsite http://www.xhtml2pdf.com" % (
     VERSION,
     BUILD,
     )
